--- a/FE/Aula 7 js/Ex/lojaCSS.css
+++ b/FE/Aula 7 js/Ex/lojaCSS.css
@@ -1,3 +1,55 @@
 *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
+body{
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    background: -webkit-gradient(linear, left top, left bottom, from(#424242), to(#bcbcbc));
+    background-repeat: no-repeat;
+}
+.funcionarios{
+    display: flex;
+    flex-wrap:wrap;
+    height: 100vh;
+    justify-content: center;
+    
+}
+.info-funcionario{
+    width: 20vw;
+    height: 400px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px;
+    padding:  15px;
+}
+#img-funcionario{
+    width: 4vw;
+    height: 8vh;
+}
+.info-funcionario > button > img {
+    
+
+}
+.botao{
+    visibility: hidden;
+    display: none;
+}
+.modelo{
+    visibility: hidden;
+    display: none;
+}
+#botao-lixo{
+    width: 32px;
+    height: 32px;
+}
+.info-funcionario{
+    background-color: azure;
 }
