--- a/FE/Aula 10 js/cadastro.css
+++ b/FE/Aula 10 js/cadastro.css
@@ -7,10 +7,20 @@ body{
     display: flex;
     justify-content: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-image: linear-gradient(45deg,  #FF87CA, #FFC4E1, #EAEAEA, #EED7CE);
+    width: 100vw;
+    height: 100vh;
 }
 #user-info{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    background-image: linear-gradient(45deg,  #B983FF, #94B3FD, #94DAFF, #99FEFF);
+    box-shadow: 0 0 1em black;
+    border-radius: 15px;
+    width: 300px;
+    height: 400px;
+    margin-top: 20%;
+
 }
