--- a/BE/Aula 7 be/Ex7/lancamentos_front/index.css
+++ b/BE/Aula 7 be/Ex7/lancamentos_front/index.css
@@ -1,7 +1,33 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+#cont{
+    display: flex;
+    justify-content: center;    
+}
+#deb{
+    padding-right:80px ;
+}
+.cab{
+    margin: 30px;
+}
+#deb td{
+    padding-left: 25px;
+}
+#cred td{
+    padding-left: 25px;
+}
+tbody tr:nth-child(odd) {
+    background-color: #fff;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #ddd;
 }
